# voicevox_engine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  Makefile  README.en.md  README.md  README_EN.md  VERSION.txt  _typos.toml  check_tts.py  constraints.txt  default.csv  default_setting.yml  docker-bake.hcl  docker-compose.yml  engine_manifest.json  generate_licenses.py  generate_manifest.py  get_cost_candidates.py  get_percentile.py  index.html  local_build.md  make_docs.py  mypy.ini  poetry_export_all.py  poetry_export_check.py  presets.yaml  pylock.toml  pyproject.toml  query.json  requirements-build.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements-license.txt  requirements-test.in  requirements-test.txt  (+15 more)
.github/ISSUE_TEMPLATE/: bugreport.md  featurerequest.md  question.md
.github/workflows/: audit.yml  build-docker.yml  build-docs.yml  build-engine-container.yml  build-engine-package.yml  build-engine.yml  build-latest-dev.yml  build-latest-engine-container.yml  build.yml  check.yml  coverage-comment.yml  labeler.yml  release-test-docker.yml  release-test.yml  release_latest_dev.yml  test-engine-container.yml  test-engine-package.yml  test-freshness.yml  test-issue-freshness.yml  test-merge-gatekeeper.yml  test-security.yml  test.yml  typos.yml  upload-gh-pages.yml
api/: index.html
auth/: schemas.py  setting.py  utils.py
build_util/: .pre-commit-config.yaml  build_preprocess.bash  check_release_build.py  codesign.bash  create_venv_and_generate_licenses.bash  file_map.py  generate_filemap.py  generate_licenses.py  get_cost_candidates.py  make_docs.py  merge_update_infos.py  merge_voicevox_resource.bash  modify_pyinstaller.bash  process_voicevox_resource.bash  run.spec  test_release_build.py
build_util/macos/: copy_missing_dylibs.py  fix_rpaths.py
database/: crud.py  dbconnect.py  models.py  setting.py
docs/: CONTRIBUTING.md  Glossary.en.md  Integration_with_VOICEVOX_Speech_Synthesis_Engine.en.md  MAINTENANCE.md  ResourceManagerの仕様について.md  Resource_File_URLs_and_Filemap.en.md  VOICEVOX音声合成エンジンとの連携.md  ソングAPIの使い方.md  プリセット機能について.md  リソースファイルのURLとfilemap.md  用語集.md
docs/api/: index.html
engine_manifest_assets/: downloadable_libraries.json  dummy_downloadable_models.json  update_infos.json
html/: index.html
manifest_assets/: base_info.json  dependency_licenses.json  manifest.json  terms_of_service.md  update_infos.json
public/: index.html
resources/: default.csv  setting_ui_template.html
resources/engine_manifest_assets/: downloadable_libraries.json  update_infos.json
scripts/: create_venv_and_generate_licenses.bash  generate_licenses.py  get_cost_candidates.py  process_voicevox_resource.bash
speaker_info/: filemap.json
speaker_info/35b2c544-660e-401e-b503-0e14c635303a/: metas.json
speaker_info/388f246b-8c41-4ac1-8e2d-5d79f3ff56d9/: metas.json
speaker_info/7ffcb7ce-00ec-4bdc-82cd-45a8889e43ff/: metas.json
speaker_info/b1a81618-b27b-40d2-b0ea-27a9ad408c4b/: metas.json
speaker_info/dummy1uuid/: policy.md
speaker_info/dummy2uuid/: policy.md
test/: .gitignore  __init__.py  conftest.py  data_hello_hiho.py  test_acoustic_feature_extractor.py  test_api.py  test_connect_base64_waves.py  test_core_initializer.py  test_core_utility.py  test_core_version.py  test_core_version_utility.py  test_downloadable_library.py  test_fastapi_model.py  test_fastapi_model_converter.py  test_full_context_label.py  test_guided.py  test_kana_converter.py  test_kana_parser.py  test_library_manager.py  test_manifest.py  test_metas_store.py  test_mock_synthesis_engine.py  test_mock_tts_engine.py  test_mora_list.py  test_mora_to_text.py  test_parse_core_version.py  test_preset.py  test_process_utility.py  test_regex_aquestalk.py  test_router_commons.py  test_run.py  test_setting.py  test_sv_models.py  test_synthesis_engine.py  test_synthesis_engine_base.py  test_text_analyzer.py  test_tts_engine.py  test_tts_engine_base.py  test_user_dict.py  test_user_dict_model.py  (+4 more)
test/benchmark/: __init__.py  engine_preparation.py  setup.py
test/e2e/: __init__.py  conftest.py  generate_test_client.py  test_audio_query.py  test_characters.py  test_disable_api.py  test_engine_manifest.py  test_invalid_style_id.py  test_missing_core.py  test_missing_engine.py  test_openapi.py  test_preset.py  test_setting.py  test_sing.py  test_speakers.py  test_tts.py  test_user_dict_word.py  test_validate_speakers.py  test_validate_version.py
test/preset/: presets-test-1.yaml  presets-test-2.yaml  presets-test-3.yaml  test_preset.py
test/setting/: setting-test-load-1.yaml  test_setting.py
test/synthesis_engine/: test_synthesis_engine.py
test/tts_pipeline/: test_acoustic_feature_extractor.py  test_connect_base64_waves.py  test_kana_converter.py  test_mora_mapping.py  test_phoneme.py  test_text_analyzer.py  test_tts_engine.py  test_tts_engine_base.py  test_tts_engines.py  test_wave_synthesizer.py
test/unit/: __init__.py  test_core_initializer.py  test_core_version_utility.py  test_engine_manifest.py  (+3 more)
tools/: __init__.py  build_and_push_docker_manifest_lists.bash  build_and_push_multi_platform_docker_images.bash  check_release_build.py  codesign.bash  codesign_cleanup.bash  codesign_setup.bash  create_venv_and_generate_licenses.bash  generate_docker_image_names.bash  generate_docker_image_names.py  generate_filemap.py  generate_licenses.py  get_cost_candidates.py  make_docs.py  merge_engine_manifest.py  merge_update_infos.py  modify_pyinstaller.bash  process_voicevox_resource.bash
ui_template/: ui.html
voicevox_engine/: __init__.py  __main__.py  acoustic_feature_extractor.py  cancellable_engine.py  chat_bot.py  core_adapter.py  core_initializer.py  core_wrapper.py  cores_maker.py  downloadable_library.py  engine_manifest.py  forwarder.py  full_context_label.py  guided.py  guided_extractor.py  kana_parser.py  library.py  library_manager.py  model.py  mora_list.py  morphing.py  part_of_speech_data.py  resource_manager.py  run.py  run.spec  setting.py  sv_model.py  synthesis_engine.py  user_dict.py
(+396 files in other folders)
