[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "D", "S101"]
ignore = [
  "E501", # line-too-long
  "D400", # missing-trailing-period。日本語の「。」に対応していないため。
  "D403", # first-word-uncapitalized。日本語とは無関係であるため。日英混合時の挙動に一貫性が無いため。
]
unfixable = [
  "F401", # unused-import
  "F841"  # unused-variable
]

[tool.ruff.lint.per-file-ignores]
"test/**/test_*.py" = ["D103"] # undocumented-public-function。pytest の対象 test_*() が D103 の対象になり、関数名から内容が自明でも docstring を強制されるため。
"test/*" = ["S101"] # assert。テスト環境では assert が除去されないため。

[tool.ruff.lint.isort]
known-first-party = ["voicevox_engine"]
known-third-party = ["numpy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"
python_version = "3.11"
ignore_missing_imports = true
warn_unreachable = true

[tool.typos.default.extend-words]
datas = "datas" # PyInstaller's argument

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^2.2.3"
fastapi-slim = "^0.115.5"
jinja2 = "^3.1.3" # NOTE: required by fastapi.templating.Jinja2Templates (fastapi-slim's unmanaged dependency)
python-multipart = "^0.0.20" # NOTE: required by fastapi.Form (fastapi-slim's unmanaged dependency)
uvicorn = "^0.34.0"
soundfile = "^0.13.1"
pyyaml = "^6.0.1"
pyworld = "^0.3.5"
pyopenjtalk = { git = "https://github.com/VOICEVOX/pyopenjtalk", rev = "5b70b94f3460ece07ea183227db088ce8d5212a6" }
semver = "^3.0.0"
platformdirs = "^4.2.0"
soxr = "^0.5.0"
pydantic = "^2.7.3"
starlette = "^0.45.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.0"
coveralls = "^4.0.1"
poetry = "2.1.1"
poetry-plugin-export = "^1.8.0"
httpx = "^0.28.1" # NOTE: required by fastapi.testclient.TestClient (fastapi-slim's unmanaged dependency)
syrupy = "^4.6.1"
types-pyyaml = "^6.0.12"
pip-licenses = "5.0.0" # NOTE: must be specified exactly (c.f. #1281)
pre-commit = "^4.0.1"
pip-audit = "^2.7.3"
ruff = "^0.11.1"
typos = "^1.31.1"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
