[project]
name = "voicevox_engine"
version = "0.24.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
  "fastapi-slim>=0.115.5",
  "jinja2>=3.1.3", # NOTE: required by fastapi.templating.Jinja2Templates (fastapi-slim's unmanaged dependency)
  "kanalizer>=0.1.1",
  "numpy>=2.2.3",
  "platformdirs>=4.2.0",
  "pydantic>=2.7.3",
  "pyopenjtalk",
  "python-multipart>=0.0.20", # NOTE: required by fastapi.Form (fastapi-slim's unmanaged dependency)
  "pyworld>=0.3.5",
  "pyyaml>=6.0.1",
  "semver>=3.0.0",
  "setuptools>=78.1.0", # NOTE: pyworldがpkg_resourcesを使っている。
  "soundfile>=0.13.1",
  "soxr>=0.5.0",
  "starlette>=0.45.3",
  "uvicorn>=0.34.0",
]

[tool.uv]
default-groups = []

[tool.uv.sources]
pyopenjtalk = { git = "https://github.com/VOICEVOX/pyopenjtalk", rev = "74703b034dd90a1f199f49bb70bf3b66b1728a86" }

[dependency-groups]
build = ["pyinstaller<6"] # NOTE: PyInstaller6ではmacOSのエディタにバンドルすると動作しなくなる (ref: https://github.com/VOICEVOX/voicevox_engine/issues/1022)
dev = [
  "coveralls>=4.0.1",
  "httpx>=0.28.1", # NOTE: required by fastapi.testclient.TestClient (fastapi-slim's unmanaged dependency)
  "mypy>=1.10.0",
  "pip-audit>=2.7.3",
  "pip-licenses==5.0.0", # NOTE: must be specified exactly (ref: https://github.com/VOICEVOX/voicevox_engine/issues/1281)
  "pre-commit>=4.0.1",
  "pytest>=8.2.0",
  "ruff>=0.11.1",
  "syrupy>=4.6.1",
  "types-pyyaml>=6.0.12",
  "typos>=1.31.1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "D", "D213", "PT"]
ignore = [
  "E501", # line-too-long
  "D400", # missing-trailing-period。日本語の「。」に対応していないため。
  "D403", # first-word-uncapitalized。日本語とは無関係であるため。日英混合時の挙動に一貫性が無いため。
]
unfixable = [
  "F401", # unused-import
  "F841", # unused-variable
]

[tool.ruff.lint.per-file-ignores]
"test/**/test_*.py" = ["D103"] # undocumented-public-function。pytest の対象 test_*() が D103 の対象になり、関数名から内容が自明でも docstring を強制されるため。

[tool.ruff.lint.isort]
known-first-party = ["voicevox_engine"]
known-third-party = ["numpy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"
python_version = "3.11"
ignore_missing_imports = true
warn_unreachable = true

[tool.typos.default.extend-words]
datas = "datas" # PyInstaller's argument
